--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -13,7 +14,13 @@
         android:theme="@style/Theme.ProjetDevMobileMoussironLamothe"
         tools:targetApi="31">
         <activity
+            android:name=".ProduitsAdapter"
+            android:exported="false" />
+        <activity
             android:name=".ProduitsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".CategoriesActivity"
             android:exported="false" />
         <activity
             android:name=".InfoActivity"
