--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,29 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+        xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application
-        android:allowBackup="true"
-        android:dataExtractionRules="@xml/data_extraction_rules"
-        android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/logo_wis"
-        android:label="@string/app_name"
-        android:supportsRtl="true"
-        android:theme="@style/Theme.ProjetDevMobileMoussironLamothe"
-        tools:targetApi="31">
+            android:allowBackup="true"
+            android:dataExtractionRules="@xml/data_extraction_rules"
+            android:fullBackupContent="@xml/backup_rules"
+            android:icon="@mipmap/logo_wis"
+            android:label="@string/app_name"
+            android:supportsRtl="true"
+            android:theme="@style/Theme.ProjetDevMobileMoussironLamothe"
+            tools:targetApi="31">
         <activity
-            android:name=".ProduitsActivity"
-            android:exported="false" />
+                android:name=".StudentActivity"
+                android:exported="false" />
         <activity
-            android:name=".InfoActivity"
-            android:exported="false" />
+                android:name=".ProduitsActivity"
+                android:exported="false" />
         <activity
-            android:name=".MainActivity"
-            android:exported="false" />
+                android:name=".InfoActivity"
+                android:exported="false" />
         <activity
-            android:name=".SplashActivity"
-            android:exported="true">
+                android:name=".MainActivity"
+                android:exported="false" />
+        <activity
+                android:name=".SplashActivity"
+                android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
